<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicletext"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/vehicle"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vehicleID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="textPersonName"
            android:textColor="#FF000000"
            android:textColorHint="#8A8A8A" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehiclecode"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/vehicle_code"
            android:textColor="#FF000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/redirect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/more"
            android:textColor="#000000"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#F30000"
            android:textSize="16sp" />
" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/passenger"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passengerID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:textColor="#FF000000"
            android:textColorHint="#8A8A8A" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distancetext"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/distance"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/distanceID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:includeFontPadding="false"
            android:inputType="numberDecimal"
            android:textColor="#FF000000"
            android:textColorHint="#8A8A8A"
            android:textIsSelectable="false" />



    </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_type"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/fuelradiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/DieselRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/diesel"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/PetrolRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petrol"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/ElectricRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/electric" />


        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calculatebutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/calculate" />


    <Button
        android:id="@+id/resetbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/reset" />

</LinearLayout>


    <Button
        android:id="@+id/historybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history" />

    <Button
        android:id="@+id/languagebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <TextView
        android:id="@+id/tvdisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold" />



</LinearLayout>
